log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 11:22:18 AM UTC: 
 tests:  0|6
total_score: 0/70
d294ae9
Fri 31 Mar 2023 11:30:29 AM UTC: 
 arraylist.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:58: error: expected ‘)’ before ‘;’ token
   14 |   ArrayList *aux = (ArrayList *) malloc(sizeof(ArrayList);
      |                                        ~                 ^
      |                                                          )
arraylist.c:24:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   24 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:14:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   14 |   ArrayList *aux = (ArrayList *) malloc(sizeof(ArrayList);
      |              ^~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:42:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   42 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b377a7c
Fri 31 Mar 2023 11:30:44 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
bfdcd55
Fri 31 Mar 2023 11:33:20 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:50: error: ‘*aux.capacity’ may be used uninitialized [-Werror=maybe-uninitialized]
   16 |   aux ->data = (void *) malloc(sizeof(void) * aux->capacity);
      |                                               ~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9614375
Fri 31 Mar 2023 11:33:40 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a23f235
Fri 31 Mar 2023 11:51:01 AM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
test.c: In function ‘append’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:48:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   48 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c50301c
Fri 31 Mar 2023 11:52:16 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:32:32: error: expected ‘)’ before ‘l’
   32 | l-> data = realloc(sizeof(data) l->capacity*2);
      |                   ~            ^~
      |                                )
arraylist.c:32:20: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   32 | l-> data = realloc(sizeof(data) l->capacity*2);
      |                    ^~~~~~~~~~~~
      |                    |
      |                    long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:32:12: error: too few arguments to function ‘realloc’
   32 | l-> data = realloc(sizeof(data) l->capacity*2);
      |            ^~~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:14: note: declared here
  551 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:48:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   48 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
baec80d
Fri 31 Mar 2023 11:53:57 AM UTC: 
 arraylist.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:27:4: error: statement with no effect [-Werror=unused-value]
   27 |   l->data
      |   ~^~~~~~
arraylist.c:27:10: error: expected ‘;’ before ‘}’ token
   27 |   l->data
      |          ^
      |          ;
   28 | 
   29 | }
      | ~         
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:47:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   47 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e83617
Fri 31 Mar 2023 11:55:59 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘append’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:48:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   48 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ef2a127
Fri 31 Mar 2023 11:58:56 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘append’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:47:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   47 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ba4c38a
Fri 31 Mar 2023 11:59:03 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘append’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:47:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   47 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7dd0055
